--- a/app/src/main/res/layout/activity_info_contacts.xml
+++ b/app/src/main/res/layout/activity_info_contacts.xml
@@ -270,7 +270,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="smirnovEVG123@mail.ru"
+                android:text="sea222777@yandex.ru"
                 app:layout_constraintStart_toStartOf="@+id/tv_email"
                 app:layout_constraintTop_toBottomOf="@+id/tv_email"></TextView>
             <TextView
