--- a/app/src/main/res/layout/activity_training.xml
+++ b/app/src/main/res/layout/activity_training.xml
@@ -169,7 +169,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="5dp"
             android:fontFamily="@font/sf_protext_semibold"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -192,7 +192,7 @@
             android:id="@+id/btn_docs"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:fontFamily="@font/sf_protext_semibold"
@@ -201,7 +201,7 @@
             android:text="Документы"
             android:textColor="@color/white"
             android:textSize="14sp"
-            app:backgroundTint="@color/iconsBiruza"
+            app:backgroundTint="@color/textSecondary"
             app:cornerRadius="10dp"
             app:icon="@drawable/ic_docs"
             app:iconGravity="textEnd"
@@ -223,7 +223,7 @@
             android:layout_marginEnd="20dp"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:backgroundTint="@color/iconsBiruza"
+            android:backgroundTint="@color/textSecondary"
             android:text="FAQ"
             app:cornerRadius="10dp"
             app:icon="@drawable/ic_faq"
@@ -262,6 +262,7 @@
             <TextView
                 android:id="@+id/signature"
                 style="@style/SecondaryText"
+                android:textColor="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
@@ -269,7 +270,7 @@
                 android:layout_marginBottom="20dp"
                 android:gravity="start"
                 android:text="Что такое пептиды?"
-                android:fontFamily="@font/sf_protext_semibold"
+                android:fontFamily="@font/sf_protext_medium"
                 android:textSize="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -302,6 +303,7 @@
 <!--        </LinearLayout>-->
 
         <androidx.recyclerview.widget.RecyclerView
+            android:visibility="gone"
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -350,7 +352,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp"
                 android:backgroundTint="@color/iconsBiruza"
