--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -133,6 +133,7 @@
                 android:text="Добро пожаловать в PeptideLab!" />
 
             <TextView
+                android:id="@+id/text"
                 style="@style/SecondaryText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
