--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="infoblock_background">#172236</color>
     <color name="infoblock_stroke">#212c41</color>
     <color name="textSecondary">#7f8fa5</color>
-    <color name="iconsBiruza">#00BCD4</color>
+    <color name="cyan">#00BCD4</color>
     <color name="red">#FF4040</color>
     <color name="green">#00c74f</color>
     <color name="orange">#d08700</color>
