--- a/app/src/main/res/drawable/ic_book.xml
+++ b/app/src/main/res/drawable/ic_book.xml
@@ -8,13 +8,13 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="@color/iconsBiruza"
+      android:strokeColor="@color/cyan"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M22,3h-6a4,4 0,0 0,-4 4v14a3,3 0,0 1,3 -3h7z"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="@color/iconsBiruza"
+      android:strokeColor="@color/cyan"
       android:strokeLineCap="round"/>
 </vector>
