--- a/app/src/main/res/layout/activity_training.xml
+++ b/app/src/main/res/layout/activity_training.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:background="@color/background">
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/main"
+        android:id="@+id/mainContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:context=".TrainingActivity"
@@ -19,17 +19,17 @@
 
         <!-- Верхняя панель (header / toolbar) -->
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/linearLayout"
+            android:id="@+id/headerContainer"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:background="@color/header_backgroud"
-            app:layout_constraintBottom_toTopOf="@+id/view"
+            app:layout_constraintBottom_toTopOf="@+id/headerDevideLine"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/flaskIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_marginStart="8dp"
@@ -39,19 +39,19 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/flask"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/linearLayout2"
+                app:layout_constraintEnd_toStartOf="@id/titleTextGroup"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
-                android:id="@+id/linearLayout2"
+                android:id="@+id/titleTextGroup"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_marginStart="8dp"
                 android:gravity="center_vertical"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/imageButton"
+                app:layout_constraintStart_toEndOf="@id/flaskIcon"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
@@ -70,7 +70,7 @@
             </LinearLayout>
 
             <ImageButton
-                android:id="@+id/imageButton3"
+                android:id="@+id/historyButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="#00000000"
@@ -79,11 +79,11 @@
                 android:scaleY="0.8"
                 android:src="@drawable/man_avatar_woman_account_people_person_male_interface_profile_user_icon_259529__1_"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/btnMenu"
+                app:layout_constraintEnd_toStartOf="@id/menuButton"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
-                android:id="@+id/btnMenu"
+                android:id="@+id/menuButton"
                 android:layout_width="54dp"
                 android:layout_height="match_parent"
                 android:backgroundTint="#00000000"
@@ -99,16 +99,16 @@
 
         <!-- Разделительная линия под шапкой -->
         <View
-            android:id="@+id/view"
+            android:id="@+id/headerDevideLine"
             android:layout_width="match_parent"
             android:layout_height="1.5dp"
             android:background="@color/devide_line"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/linearLayout" />
+            app:layout_constraintTop_toBottomOf="@id/headerContainer" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout2"
+            android:id="@+id/currentProgramContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -117,7 +117,7 @@
             android:background="@drawable/shape_blocks"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/linearLayout">
+            app:layout_constraintTop_toBottomOf="@id/headerContainer">
 
             <ImageView
                 android:id="@+id/ic_book"
@@ -128,13 +128,13 @@
                 android:maxHeight="50dp"
                 android:src="@drawable/ic_book__2_"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/textView3"
+                app:layout_constraintEnd_toStartOf="@+id/currentProgramTitle"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/iconsBiruza" />
+                app:tint="@color/cyan" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/currentProgramTitle"
                 style="@style/HeaderText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -147,7 +147,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/currentProgramName"
                 style="@style/SecondaryText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -159,7 +159,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/ic_book"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                app:layout_constraintTop_toBottomOf="@+id/currentProgramTitle" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -176,7 +176,7 @@
             android:text="Видео"
             android:textColor="@color/white"
             android:textSize="14sp"
-            app:backgroundTint="@color/iconsBiruza"
+            app:backgroundTint="@color/cyan"
             app:cornerRadius="10dp"
             app:icon="@drawable/ic_video"
             app:iconGravity="textEnd"
@@ -185,7 +185,7 @@
             app:iconTint="@color/white"
             app:layout_constraintEnd_toStartOf="@+id/btn_docs"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
+            app:layout_constraintTop_toBottomOf="@+id/currentProgramContainer"
             />
 
         <com.google.android.material.button.MaterialButton
@@ -210,7 +210,7 @@
             app:iconTint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btn_videos"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
+            app:layout_constraintTop_toBottomOf="@+id/currentProgramContainer" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_FAQ"
@@ -336,7 +336,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
-                android:backgroundTint="@color/iconsBiruza"
+                android:backgroundTint="@color/cyan"
                 android:fontFamily="@font/sf_protext_semibold"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
@@ -355,7 +355,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp"
-                android:backgroundTint="@color/iconsBiruza"
+                android:backgroundTint="@color/cyan"
                 android:fontFamily="@font/sf_protext_semibold"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
@@ -371,7 +371,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
     <LinearLayout
-        android:id="@+id/right_drawer"
+        android:id="@+id/rightMenuContainer"
         android:layout_width="280dp"
         android:layout_height="match_parent"
         android:layout_gravity="end"
@@ -385,7 +385,7 @@
 
         <!-- Заголовок меню -->
         <TextView
-            android:id="@+id/menuTitle"
+            android:id="@+id/rightMenuTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Меню"
@@ -394,13 +394,13 @@
             android:paddingBottom="10dp"
             android:layout_marginStart="26dp"
             android:fontFamily="@font/sf_protext_bold"
-            android:textColor="@color/iconsBiruza" />
+            android:textColor="@color/cyan" />
 
         <!-- Пункт меню -->
         <com.google.android.material.button.MaterialButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/dashboard"
+            android:id="@+id/rightMenuMain"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/sf_protext_semibold"
             android:paddingTop="10dp"
@@ -428,7 +428,7 @@
             android:textColor="@color/white"
             android:textSize="15sp"
             android:textAlignment="viewStart"
-            android:backgroundTint="@color/iconsBiruza"
+            android:backgroundTint="@color/cyan"
 
             app:cornerRadius="10dp"
             app:icon="@drawable/ic_book"
@@ -436,7 +436,7 @@
             app:iconPadding="4dp"
             app:iconSize="22sp"
             app:iconTint="@color/white"
-            android:id="@+id/training"/>
+            android:id="@+id/rightMenuTraining"/>
 
         <com.google.android.material.button.MaterialButton
             android:layout_width="match_parent"
@@ -456,7 +456,7 @@
             app:iconPadding="4dp"
             app:iconSize="22sp"
             app:iconTint="@color/textSecondary"
-            android:id="@+id/synthesis"/>
+            android:id="@+id/rightMenuSynthesis"/>
 
         <com.google.android.material.button.MaterialButton
             android:layout_width="match_parent"
@@ -476,6 +476,6 @@
             app:iconPadding="6dp"
             app:iconSize="22sp"
             app:iconTint="@color/textSecondary"
-            android:id="@+id/infoContacts"/>
+            android:id="@+id/rightMenuInfoContacts"/>
     </LinearLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
