--- a/app/src/main/res/layout/item_device.xml
+++ b/app/src/main/res/layout/item_device.xml
@@ -5,14 +5,14 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/tvDeviceName"
+        android:id="@+id/deviceName"
         android:text="Device Name"
         android:textSize="16sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
-        android:id="@+id/tvDeviceAddress"
+        android:id="@+id/deviceAddress"
         android:text="AA:BB:CC:DD:EE:FF"
         android:textSize="12sp"
         android:layout_width="wrap_content"
