--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,4 +51,14 @@
         <item name="android:backgroundTint">@color/background</item>
     </style>
 
+    <style name="CustomSlider" parent="Widget.MaterialComponents.Slider">
+        <!-- указываем стиль для value label -->
+        <item name="labelStyle">@style/CustomSliderLabel</item>
+    </style>
+    <!-- стиль для всплывающего окошка -->
+    <style name="CustomSliderLabel">
+        <item name="android:backgroundTint">@color/cyan</item> <!-- фон окошка -->
+        <item name="android:textColor">@color/white</item>           <!-- цвет текста -->
+    </style>
+
 </resources>
