--- a/app/src/main/res/layout/activity_info_contacts.xml
+++ b/app/src/main/res/layout/activity_info_contacts.xml
@@ -280,7 +280,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="20dp"
-                android:text="zhuravleva_02@mail.ru"
+                android:text="zhuravleva.iuliia43@mail.ru"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/tv_email"
                 app:layout_constraintTop_toBottomOf="@+id/tv_emailAdress"></TextView>
