--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -275,6 +275,7 @@
                 android:layout_marginEnd="30dp"
                 android:fontFamily="@font/sf_protext_semibold"
                 tools:text="ACTH(1-24)"
+                android:text="ACTH(1-24)"
                 app:layout_constraintBottom_toTopOf="@+id/currentProgramLastUpdateText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
